[buttonMisAlign] fix: radio button align style

--- a/src/shared/ui/RadioGroup/ui/RadioButton/RadioButton.module.scss
+++ b/src/shared/ui/RadioGroup/ui/RadioButton/RadioButton.module.scss
@@ -12,6 +12,9 @@
     border: 2px solid var(--color-accent);
     border-radius: 50%;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &::after {
         content: "";
